--- a/prepros.config
+++ b/prepros.config
@@ -886,6 +886,12 @@
         }
       },
       {
+        "file": "seller-panel and website/web-assets/assets/scss/style.scss",
+        "config": {
+          "customOutput": "seller-panel and website/web-assets/assets/css/style.css"
+        }
+      },
+      {
         "file": "website/assets/scss/style.scss",
         "config": {
           "customOutput": "website/assets/css/style.css"
